<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground2">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="157dp"
                android:layout_height="35dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="237dp"
                android:layout_marginRight="237dp"
                android:text="@string/welcome"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="339dp"
                android:layout_height="38dp"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="50dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColorHint="@color/textColor" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="339dp"
                android:layout_height="38dp"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="50dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColorHint="@color/textColor" />

            <EditText
                android:id="@+id/etSex"
                android:layout_width="339dp"
                android:layout_height="38dp"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="50dp"
                android:ems="10"
                android:hint="@string/sex"
                android:inputType="textPersonName"
                android:textColorHint="@color/textColor" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="339dp"
                android:layout_height="38dp"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="50dp"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"
                android:textColorHint="@color/textColor" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="339dp"
                android:layout_height="38dp"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="50dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/textColor" />

            <EditText
                android:id="@+id/etNib"
                android:layout_width="339dp"
                android:layout_height="38dp"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="50dp"
                android:ems="10"
                android:hint="@string/nib"
                android:inputType="number"
                android:textColorHint="@color/textColor" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="339dp"
                android:layout_height="38dp"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="50dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:textColorHint="@color/textColor" />

            <EditText
                android:id="@+id/etCC"
                android:layout_width="339dp"
                android:layout_height="38dp"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="50dp"
                android:ems="10"
                android:hint="@string/cc"
                android:inputType="number"
                android:textColorHint="@color/textColor" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="138dp"
                android:layout_height="44dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:layout_marginTop="28dp"
                android:buttonTint="@color/textColor"
                android:text="Doente"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="160dp"
                android:layout_height="44dp"
                android:layout_marginTop="28dp"
                android:layout_marginStart="36dp"
                android:layout_marginLeft="36dp"
                android:textColor="@color/textColor"
                android:buttonTint="@color/textColor"
                android:text="Profissional Saude" />

            <Button
                android:id="@+id/bRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginLeft="180dp"
                android:layout_marginBottom="35dp"
                android:background="@color/buttonColor"
                android:text="Register"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>